<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightPrimary"
    android:orientation="vertical"
    tools:context="com.example.android.rickandmortycardgame.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/weight_space"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RelativeLayout
            style="@style/RelativeLayoutForIcons"
            android:layout_width="@dimen/weight_space"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/player1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_face_black_48dp" />

            <TextView
                android:id="@+id/overall_score_a"
                style="@style/IndividualScoreView"
                android:layout_width="@dimen/individual_text_score"
                android:layout_height="@dimen/individual_text_score"
                android:layout_alignBottom="@id/player1"
                android:layout_alignRight="@id/player1"
                android:background="@drawable/circle_light_one"
                android:text="@string/_0" />
        </RelativeLayout>

        <View
            android:layout_width="@dimen/line_space"
            android:layout_height="match_parent"
            android:background="@color/colorDivider" />

        <RelativeLayout
            style="@style/RelativeLayoutForIcons"
            android:layout_width="@dimen/weight_space"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/player2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_face_black_48dp" />

            <TextView
                android:id="@+id/overall_score_b"
                style="@style/IndividualScoreView"
                android:layout_width="@dimen/individual_text_score"
                android:layout_height="@dimen/individual_text_score"
                android:layout_alignBottom="@id/player2"
                android:layout_alignRight="@id/player2"
                android:background="@drawable/circle_light_two"
                android:text="@string/_0" />
        </RelativeLayout>
    </LinearLayout>

    <View
        style="@style/Divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_space" />

    <RelativeLayout
        android:id="@+id/progress_section"
        style="@style/ProgressSection"
        android:layout_width="match_parent"
        android:layout_height="@dimen/progress_height">

        <ProgressBar
            android:id="@+id/progress_bar1"
            style="?android:progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/line"
            android:max="4"
            android:progress="0" />

        <TextView
            android:id="@+id/score_a"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/progress_bar1"
            android:text="@string/_0" />

        <View
            android:id="@+id/line"
            style="@style/MiddleDividerLineExceptGif"
            android:layout_width="@dimen/line_space"
            android:layout_height="match_parent" />

        <ProgressBar
            android:id="@+id/progress_bar2"
            style="?android:progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/line"
            android:max="4"
            android:progress="0" />

        <TextView
            android:id="@+id/score_b"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/progress_bar2"
            android:text="@string/_0">

        </TextView>
    </RelativeLayout>

    <View
        style="@style/Divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_space" />

    <!-- player winner A layout -->

    <LinearLayout
        android:id="@+id/playerAWinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            style="@style/LinearSpacing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextStyle"
                android:layout_width="@dimen/weight_space"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/you_are_a_real_rick_you_are_not_easy_to_be_tricked" />

            <View
                style="@style/MiddleDividerLineExceptGif"
                android:layout_width="@dimen/line_space"
                android:layout_height="match_parent" />

            <TextView
                style="@style/TextStyle"
                android:layout_width="@dimen/weight_space"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/you_are_a_real_beth_better_to_be_careful_around_you" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <pl.droidsonroids.gif.GifImageView
                style="@style/LeftGifImage"
                android:layout_width="@dimen/weight_space"
                android:layout_height="@dimen/card_image_height"
                android:layout_weight="1"
                android:src="@drawable/parasite_gif" />

            <View
                style="@style/Divider"
                android:layout_width="@dimen/line_space"
                android:layout_height="match_parent" />

            <pl.droidsonroids.gif.GifImageView
                style="@style/RightGifImage"
                android:layout_width="@dimen/weight_space"
                android:layout_height="@dimen/card_image_height"
                android:layout_weight="1"
                android:src="@drawable/poopy_real_gif" />
        </LinearLayout>

        <View
            style="@style/Divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_space" />

        <LinearLayout
            style="@style/GifLinearSpacing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing"
                android:gravity="center"
                android:text="@string/try_again" />

            <Button
                style="@style/RestartButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="nextRoundOne"
                android:text="@string/let_s_kill_some_parasites" />

        </LinearLayout>
    </LinearLayout>

    <!-- player winner B layout -->
    <LinearLayout
        android:id="@+id/playerBWinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            style="@style/LinearSpacing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextStyle"
                android:layout_width="@dimen/weight_space"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/you_are_a_real_beth_better_to_be_careful_around_you" />

            <View
                style="@style/MiddleDividerLineExceptGif"
                android:layout_width="@dimen/line_space"
                android:layout_height="match_parent" />

            <TextView
                style="@style/TextStyle"
                android:layout_width="@dimen/weight_space"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/you_are_a_real_rick_you_are_not_easy_to_be_tricked" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <pl.droidsonroids.gif.GifImageView
                style="@style/LeftGifImage"
                android:layout_width="@dimen/weight_space"
                android:layout_height="@dimen/card_image_height"
                android:layout_weight="1"
                android:src="@drawable/poopy_real_gif" />

            <View
                style="@style/Divider"
                android:layout_width="@dimen/line_space"
                android:layout_height="match_parent" />

            <pl.droidsonroids.gif.GifImageView
                style="@style/RightGifImage"
                android:layout_width="@dimen/weight_space"
                android:layout_height="@dimen/card_image_height"
                android:layout_weight="1"
                android:src="@drawable/parasite_gif" />
        </LinearLayout>

        <View
            style="@style/Divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_space" />

        <LinearLayout
            style="@style/GifLinearSpacing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing"
                android:gravity="center"
                android:text="@string/try_again" />

            <Button
                style="@style/RestartButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="nextRoundOne"
                android:text="@string/let_s_kill_some_parasites" />

        </LinearLayout>
    </LinearLayout>

    <!-- Game layout -->

    <RelativeLayout
        android:id="@+id/parasite_section"
        android:layout_width="match_parent"
        android:layout_height="@dimen/weight_space"
        android:layout_marginBottom="@dimen/spacing"
        android:layout_marginTop="@dimen/spacing"
        android:layout_weight="3"
        android:visibility="visible">

        <ImageView
            style="@style/LeftCardImages"
            android:layout_width="@dimen/card_image_width"
            android:layout_height="@dimen/card_image_height"
            android:layout_toLeftOf="@id/para_line"
            android:src="@drawable/parasite" />

        <View
            android:id="@+id/para_line"
            style="@style/MiddleDividerLineExceptGif"
            android:layout_width="@dimen/line_space"
            android:layout_height="match_parent" />

        <ImageView
            style="@style/RightCardImages"
            android:layout_width="@dimen/card_image_width"
            android:layout_height="@dimen/card_image_height"
            android:layout_toRightOf="@id/para_line"
            android:src="@drawable/parasite" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                style="@style/ShootButton"
                android:layout_width="@dimen/weight_space"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPink"
                android:onClick="parasite1" />

            <Button
                style="@style/ShootButton"
                android:layout_width="@dimen/weight_space"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorIndigo"
                android:onClick="parasite2" />


        </LinearLayout>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/real_section"
        android:layout_width="match_parent"
        android:layout_height="@dimen/weight_space"
        android:layout_weight="3"
        android:paddingBottom="@dimen/spacing"
        android:paddingTop="@dimen/spacing"
        android:visibility="visible">

        <ImageView
            style="@style/LeftCardImages"
            android:layout_width="@dimen/card_image_width"
            android:layout_height="@dimen/card_image_height"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/real_line"
            android:src="@drawable/real" />


        <View
            android:id="@+id/real_line"
            style="@style/MiddleDividerLineExceptGif"
            android:layout_width="@dimen/line_space"
            android:layout_height="match_parent" />

        <ImageView
            style="@style/RightCardImages"
            android:layout_width="@dimen/card_image_width"
            android:layout_height="@dimen/card_image_height"
            android:layout_toRightOf="@id/real_line"
            android:src="@drawable/real" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                style="@style/ShootButton"
                android:layout_width="@dimen/weight_space"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPink"
                android:onClick="real1" />

            <Button
                style="@style/ShootButton"
                android:layout_width="@dimen/weight_space"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorIndigo"
                android:onClick="real2" />

        </LinearLayout>
    </RelativeLayout>

    <View
        style="@style/Divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_space" />


    <LinearLayout
        android:id="@+id/overall_score"
        android:layout_width="match_parent"
        android:layout_height="@dimen/weight_space"
        android:layout_marginBottom="@dimen/spacing"
        android:layout_marginTop="@dimen/spacing"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            style="@style/OverallScoreTextDisplayStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overall_killed_characters_for_this_round" />

        <TextView
            android:id="@+id/total_kills"
            style="@style/OverallScoreTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0" />

    </LinearLayout>

    <View
        style="@style/Divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_space" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/weight_space"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton
            style="@style/DeleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="reset"
            android:src="@drawable/ic_delete_forever_black_36dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_the_delete_button_to_reset_the_score"
            android:textColor="@color/colorTextIcons" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/logo_height"
        android:layout_marginBottom="@dimen/spacing"
        android:layout_marginTop="@dimen/spacing"
        android:src="@drawable/rick_and_morty_logo" />
</LinearLayout>
